--- a/undrln.css
+++ b/undrln.css
@@ -48,6 +48,8 @@
 
       padding-top: 5px;
       padding-bottom: 5px;
+
+      font-weight: bold;
     }
     .demo4 {
       margin-right: 4px;
@@ -56,6 +58,8 @@
 
       padding-top: 5px;
       padding-bottom: 5px;
+
+      font-weight: bold;
     }
     .demo5 {
      
@@ -128,6 +132,7 @@
     -moz-background-clip: text;
     background-clip: text;
     text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+
 }
     .ghos {color: #FFFFFF;
     background: #ece9e9;
@@ -143,9 +148,14 @@
     .boss {
     color: rgba(0,0,0,0.6);
     text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);
+
+    font-weight: bold;
   }
     .boss2 {
-  color: rgba(0,0,0,0.6);
+  color: rgba(0, 0, 0, 0.603);
+  }
+  .bbold{
+    color: rgb(0, 0, 0);
   }
     .butobj {
     -webkit-box-shadow: inset -1px 3px 8px 5px #1F87FF, 2px 5px 16px 0px #0B325E, 5px 5px 15px 5px rgba(0,0,0,0); 
